@@ -1476,6 +1476,7 @@
     <F n="Showtec-Infinity-iW-720" m="Infinity iW-720"/>
     <F n="Showtec-Infinity-XPLO-15-LED-Strobe" m="Infinity XPLO-15 LED Strobe"/>
     <F n="Showtec-Kanjo-Spot-60" m="Kanjo Spot 60"/>
+    <F n="Showtec-Kanjo-Wash-RGB" m="Kanjo Wash RGB"/>
     <F n="Showtec-Led-Air-Cone-Pro" m="Led Air Cone Pro"/>
     <F n="Showtec-LED-Light-Bar-8" m="LED Light Bar 8"/>
     <F n="Showtec-LED-Light-Bar-RGB-V3" m="LED Light Bar RGB V3"/>
