@@ -1,0 +1,95 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE FixtureDefinition>
+<FixtureDefinition xmlns="http://www.qlcplus.org/FixtureDefinition">
+ <Creator>
+  <Name>Q Light Controller Plus</Name>
+  <Version>5.0.0 Beta 3</Version>
+  <Author>Michel Sliepenbeek</Author>
+ </Creator>
+ <Manufacturer>Showtec</Manufacturer>
+ <Model>Kanjo Wash RGB</Model>
+ <Type>Moving Head</Type>
+ <Channel Name="Pan" Preset="PositionPan"/>
+ <Channel Name="Pan fine" Preset="PositionPanFine"/>
+ <Channel Name="Tilt" Preset="PositionTilt"/>
+ <Channel Name="Tilt fine" Preset="PositionTiltFine"/>
+ <Channel Name="XY Speed" Preset="SpeedPanTiltFastSlow"/>
+ <Channel Name="Dimmer" Preset="IntensityMasterDimmer"/>
+ <Channel Name="Red" Preset="IntensityRed"/>
+ <Channel Name="Green" Preset="IntensityGreen"/>
+ <Channel Name="Blue" Preset="IntensityBlue"/>
+ <Channel Name="White" Preset="IntensityWhite"/>
+ <Channel Name="Color macros">
+  <Group Byte="0">Colour</Group>
+  <Capability Min="0" Max="0">No Function</Capability>
+  <Capability Min="1" Max="13" Preset="ColorMacro" Res1="#00ffff">Cyan</Capability>
+  <Capability Min="14" Max="26" Preset="ColorMacro" Res1="#a020f0">Purple</Capability>
+  <Capability Min="27" Max="39" Preset="ColorMacro" Res1="#ff00ff">Magenta (Purple / Red)</Capability>
+  <Capability Min="40" Max="52" Preset="ColorMacro" Res1="#ffa500">Orange</Capability>
+  <Capability Min="53" Max="65" Preset="ColorMacro" Res1="#ffffff">White</Capability>
+  <Capability Min="66" Max="78" Preset="ColorMacro" Res1="#ff00ff">Bright Pink</Capability>
+  <Capability Min="79" Max="91" Preset="ColorMacro" Res1="#80ff00">Bright Green (Lime)</Capability>
+  <Capability Min="92" Max="104" Preset="ColorMacro" Res1="#0080ff">Bright Blue (Brescian Blue)</Capability>
+  <Capability Min="105" Max="117" Preset="ColorMacro" Res1="#ffff00">Yellow</Capability>
+  <Capability Min="118" Max="130" Preset="ColorMacro" Res1="#fffff0">Warm White</Capability>
+  <Capability Min="131" Max="143" Preset="ColorMacro" Res1="#ff0000">Red</Capability>
+  <Capability Min="144" Max="156" Preset="ColorMacro" Res1="#00ff00">Green</Capability>
+  <Capability Min="157" Max="169" Preset="ColorMacro" Res1="#0000ff">Blue</Capability>
+  <Capability Min="170" Max="182" Preset="ColorMacro" Res1="#ffffc8">Amber</Capability>
+  <Capability Min="183" Max="195" Preset="ColorMacro" Res1="#ffffff">White</Capability>
+  <Capability Min="196" Max="223">Seven Color Gradient</Capability>
+  <Capability Min="224" Max="237">Seven Color Change</Capability>
+  <Capability Min="238" Max="255">Seven Color Jump</Capability>
+ </Channel>
+ <Channel Name="Color Jumping Speed">
+  <Group Byte="0">Speed</Group>
+  <Capability Min="0" Max="255">Speed</Capability>
+ </Channel>
+ <Channel Name="Program">
+  <Group Byte="0">Effect</Group>
+  <Capability Min="0" Max="2">No program</Capability>
+  <Capability Min="3" Max="101">Program 1 (Fast)</Capability>
+  <Capability Min="102" Max="152">Program 2 (Gradient and Jump)</Capability>
+  <Capability Min="153" Max="203">Program 3 (Slow)</Capability>
+  <Capability Min="204" Max="255">Program 4 (Sound Controlled)</Capability>
+ </Channel>
+ <Channel Name="Factory Reset !!">
+  <Group Byte="0">Maintenance</Group>
+  <Capability Min="0" Max="254" Preset="LampOn">Normal operation</Capability>
+  <Capability Min="255" Max="255">Reset to Factory Settings</Capability>
+ </Channel>
+ <Channel Name="Strobe" Preset="ShutterStrobeSlowFast"/>
+ <Mode Name="14 Channel">
+  <Channel Number="0">Pan</Channel>
+  <Channel Number="1">Pan fine</Channel>
+  <Channel Number="2">Tilt</Channel>
+  <Channel Number="3">Tilt fine</Channel>
+  <Channel Number="4">XY Speed</Channel>
+  <Channel Number="5">Dimmer</Channel>
+  <Channel Number="6">Strobe</Channel>
+  <Channel Number="7">Red</Channel>
+  <Channel Number="8">Green</Channel>
+  <Channel Number="9">Blue</Channel>
+  <Channel Number="10">Color macros</Channel>
+  <Channel Number="11">Color Jumping Speed</Channel>
+  <Channel Number="12">Program</Channel>
+  <Channel Number="13">Factory Reset !!</Channel>
+ </Mode>
+ <Mode Name="8 Channel">
+  <Channel Number="0">Pan</Channel>
+  <Channel Number="1">Tilt</Channel>
+  <Channel Number="2">Dimmer</Channel>
+  <Channel Number="3">Strobe</Channel>
+  <Channel Number="4">Red</Channel>
+  <Channel Number="5">Green</Channel>
+  <Channel Number="6">Blue</Channel>
+  <Channel Number="7">XY Speed</Channel>
+ </Mode>
+ <Physical>
+  <Bulb Type="LED" Lumens="0" ColourTemperature="0"/>
+  <Dimensions Weight="3" Width="156" Height="270" Depth="169"/>
+  <Lens Name="Other" DegreesMin="25" DegreesMax="25"/>
+  <Focus Type="Head" PanMax="540" TiltMax="180"/>
+  <Technical PowerConsumption="43" DmxConnector="3-pin"/>
+ </Physical>
+</FixtureDefinition>
